myproject/force-app/main/default/objects/Sprint__c/fields/EstHours__c.field-meta.xml
<CustomField>
    <fullName>EstHours__c</fullName>
    <label>EstHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>