myproject/force-app/main/default/objects/Sprint__c/fields/FinishDate__c.field-meta.xml
<CustomField>
    <fullName>FinishDate__c</fullName>
    <label>FinishDate</label>
    <type>DateTime</type>
</CustomField>