myproject/force-app/main/default/objects/Sprint__c/fields/WorkHours__c.field-meta.xml
<CustomField>
    <fullName>WorkHours__c</fullName>
    <label>WorkHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>