myproject/force-app/main/default/objects/Sprint__c/validationRules/end_vs_proj_end.validationRule-meta.xml
<ValidationRule>
    <fullName>end_vs_proj_end</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &gt;  Project__r.End_Date__c</errorConditionFormula>
    <errorMessage>End date is later than project end date</errorMessage>
</ValidationRule>