myproject/force-app/main/default/objects/Sprint__c/validationRules/start_vs_end.validationRule-meta.xml
<ValidationRule>
    <fullName>start_vs_end</fullName>
    <active>true</active>
    <description>start date cant be later than end date</description>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date cant be later than end date</errorMessage>
</ValidationRule>