myproject/force-app/main/default/objects/Sprint__c/validationRules/start_vs_proj_start.validationRule-meta.xml
<ValidationRule>
    <fullName>start_vs_proj_start</fullName>
    <active>true</active>
    <description>Start date cant be earlier than project start date</description>
    <errorConditionFormula>Start_Date__c &lt;  Project__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date cant be earlier than project start date or later than project end date</errorMessage>
</ValidationRule>